18 Aug 2018
fix: last post link forums.php
update: database files
fix: comments edit/delete
fix: invalid Cache dir site_config.php

16 Aug 2018
fix: check downloaded file is actually an image before optimizing it
update: composer imported classes
add: wrapper() to all admin/files
add: [br] to format_comment()
fix: take_theme.php incorrect comparison
fix: staff allowed fail post to correct forum/topic
remove: pager_new.php
remove: resize_image()
update: validemail() to use filter_var
fix: get_stylesheet()
fix: allow avatar/signature with '?' in the url
fix: AJAX Chat View Logs
update: AJAX Chat polling timer to 45 seconds after 10 min inactive
update: uglify.php to update all templates within templates folder

08 Aug 2018
fix: missing image uploader_info.php
fix: missing require user_unlocks.php
update: show poster, banner, background images, IMDb info in requests.php, offers.php, upload.php when using valid IMDb url and images are available
fix: allow anything class UC_UPLOADER and above to upload
fix: after upload multiple images to bitbucket, you can select any link correctly

07 Aug 2018
fix: write_css_class()
move: all delete torrent functions to Torrents Class
add: IMDb lookup on upload.php
add: ISBN lookup on upload.php
remove: unneeded link to google fonts AJAXChatTemplate.php
fix: Tooltips
fix: overwrite key browse_js uglify.php
update: write_classes() to write chat/js/config bbCodeTags

06 Aug 2018
fix: clear index page user blocks when edit any user
fix: missing staff_picks mytorrents.php

05 Aug 2018
fix: countable AJAX Chat
fix: path to up.gif torrenttable_functions.php
move: find images in details.php to function_get_images.php
update: allow : in torrent name
add: verify file is actually an image ImageProxy.php
move: background-16 to default.css
add: attribution to colorpicker.js
fix: get correct page/post when post count greater than per page
fix: AJAX Chat stats
fix: bluray releases
fix: admin user delete account